@@ -1,3 +1,8 @@
+2022-05-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/ci/Dockerfile: Small update
+	* docker/run/Dockerfile: Idem
+
 2022-05-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor release
